<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:minWidth="320dp"
    android:padding="@dimen/padding_medium">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_contact_input_layout"
        style="@style/AppTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        tools:helperText="@string/hint_phone_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_contact_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:padding="@dimen/padding_medium"
            android:singleLine="true"
            tools:text="@string/hint_user_phone_number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="@dimen/padding_medium" />

    <Button
        android:id="@+id/button_save"
        style="@style/AppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save" />

</LinearLayout>