...
        android:id="@+id/notification_settings_chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:chipSpacing="@dimen/padding_small">

        <com.google.android.material.chip.Chip
            android:id="@+id/check_email"
            style="@style/AppChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_email_notifications"
            tools:checked="true" />

...
